--- a/CSS/project.css
+++ b/CSS/project.css
@@ -43,7 +43,7 @@
   position: absolute;
   top: 0;
   right: 0;
-  color: whitesmoke;
+  color: rgb(255, 255, 255);
   font-weight: bold;
   width: 100%;
   height: 100%;
@@ -84,7 +84,7 @@
   background: rgba(255, 255, 255, 0.5);
   width: 100%;
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
   align-items: center;
   padding: 20px;
   bottom: -120px;
@@ -113,7 +113,7 @@
   color: #000;
   font-weight: bold;
   font-size: 40px;
-  margin-right: 40px;
+  margin-left: 10px;
 }
 
 .more .icon-links i:hover {
